# cdn

./: .env.example  .gitpod.yml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: docker.yml  release.yml  rust.yml
src/: config.rs  main.rs
src/middlewares/: auth.rs  cors.rs
src/routes/: download.rs  upload.rs
src/structures/: attachment.rs  mod.rs
src/utils/: content_type.rs  mod.rs  result.rs  s3.rs  snowflake.rs  tag.rs
