[package]
name = "cdn"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.5.9", features = ["multipart"] }
dotenv = "0.15.0"
futures = "0.3.21"
lazy_static = "1.4.0"
rust-s3 = "0.31.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.19.2", features = ["full"] }
tower-http = { version = "0.3.0", features = ["cors"] }
tree_magic = "0.2.3"
content_inspector = "0.2.4"
rbatis = { version = "3.1.11", default-features = false, features = [
    "postgres",
    "runtime-tokio-rustls",
    "upper_case_sql_keyword",
] }
rbson = "2.0.3"
quick-error = "2.0.1"