[package]
name = "cdn"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.5.12", features = ["multipart"] }
dotenv = "0.15.0"
futures = "0.3.21"
lazy_static = "1.4.0"
rust-s3 = "0.31.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.19.2", features = ["full"] }
tower-http = { version = "0.3.0", features = ["cors"] }
tree_magic = "0.2.3"
quick-error = "2.0.1"
rs-snowflake = "0.6.0"
imagesize = "0.9.0"
sqlx = { version = "0.6.0", features = [
    "runtime-tokio-rustls",
    "postgres",
    "json",
] }
ormlite = { git = "https://github.com/kurtbuilds/ormlite", rev = "a84f64b3b9ebd282d09ab196eec9361b57b523c7", features = [
    "postgres",
    "runtime-tokio-rustls",
] }
